--- a/tasks/dns/godaddy/godaddy.main.dns.yml
+++ b/tasks/dns/godaddy/godaddy.main.dns.yml
@@ -8,6 +8,7 @@
       credentials: "{{ inner_service_credentials }}"
       contents: "{{ inner_service_contents }}"
   register: ext_dns_data_wrapper
+  no_log: "{{ env_no_log }}"
   tags: ["no_print"]
 
 - name: "{{ inner_service_title }} - godaddy dns - action"
@@ -21,3 +22,4 @@
       [{{ ext_dns_item.state }}]
       {{ ext_dns_item.dns_type }}
       - {{ ext_dns_item.record }}
+  no_log: "{{ env_no_log }}"
