--- a/tasks/node/digital_ocean/digital_ocean.main.node.yml
+++ b/tasks/node/digital_ocean/digital_ocean.main.node.yml
@@ -10,6 +10,7 @@
     ext_node_base_dir_prefix: "{{ inner_service_base_dir_prefix }}"
     ext_node_tmp_dir: "{{ inner_service_tmp_dir }}"
     ext_node_result: {}
+  no_log: "{{ env_no_log }}"
   tags: ["no_print"]
 
 # Node Main Vars
@@ -19,6 +20,7 @@
     ext_node_main_credentials: "{{ ext_node_credentials.node | default({}) }}"
     ext_node_user_data: "{{ ext_node_contents.user_data | default('') }}"
     ext_node_hosts: []
+  no_log: "{{ env_no_log }}"
   tags: ["no_print"]
 
 # Main
@@ -49,6 +51,7 @@
     loop_var: ext_node_item
     label: "{{ ext_node_item_name }} ({{ ext_node_item_state }})"
   register: ext_node_details
+  no_log: "{{ env_no_log }}"
 
 - name: "{{ ext_node_title }} - tag the droplets"
   digital_ocean_tag:
@@ -77,6 +80,7 @@
     loop_var: ext_node_item_data
     label: "{{ ext_node_item_name }} - {{ ext_node_tag }}"
   when: ext_node_item_state == 'present'
+  no_log: "{{ env_no_log }}"
   tags: ["no_print_skipped"]
 
 - name: "{{ ext_node_item_title }} - set result (tmp)"
@@ -126,12 +130,14 @@
   loop_control:
     loop_var: ext_node_item_data
     label: "{{ ext_node_item_name }} ({{ ext_node_item_state }})"
+  no_log: "{{ env_no_log }}"
   tags: ["no_print"]
 
 - name: "{{ ext_node_title }} - set result (tmp)"
   set_fact:
     ext_node_result:
       hosts: "{{ ext_node_hosts }}"
+  no_log: "{{ env_no_log }}"
   tags: ["no_print"]
 
 # Set Result
@@ -139,4 +145,5 @@
 - name: "{{ ext_node_title }} - set result"
   set_fact:
     cloud_service_result: "{{ ext_node_result }}"
+  no_log: "{{ env_no_log }}"
   tags: ["no_print"]
