--- a/tasks/s3/validator.s3.yml
+++ b/tasks/s3/validator.s3.yml
@@ -7,3 +7,4 @@
       params: "{{ validator_item.data.params | default({}) }}"
       credentials: "{{ validator_item.data.credentials | default({}) }}"
       contents: "{{ validator_item.data.contents | default({}) }}"
+  no_log: "{{ env_no_log }}"
