--- a/tasks/vpn/digital_ocean/digital_ocean.validator.vpn.yml
+++ b/tasks/vpn/digital_ocean/digital_ocean.validator.vpn.yml
@@ -1,3 +1,4 @@
 - name: "{{ validator_title }} - validate if the collection (with the library) is present"
   lrd.ext_cloud.collection_validator:
     input: "[task] {{ validator_item.task }}"
+  no_log: "{{ env_no_log }}"
