--- a/tasks/dns/cloudflare/cloudflare.schema.dns.yml
+++ b/tasks/dns/cloudflare/cloudflare.schema.dns.yml
@@ -50,6 +50,9 @@ schemas:
       record:
         type: "str"
         description: "dns record to add/remove (according to state)"
+      proxied:
+        type: "bool"
+        description: "proxy through cloudflare network or just use dns"
       ttl:
         type: "int"
         description: "dns record ttl (time-to-live)"
@@ -98,6 +101,9 @@ schemas:
       record:
         type: "str"
         description: "dns record to add/remove (according to state)"
+      proxied:
+        type: "bool"
+        description: "proxy through cloudflare network or just use dns"
       ttl:
         type: "int"
         description: "dns record ttl (time-to-live)"
@@ -129,6 +135,9 @@ schemas:
         type: "str"
         non_empty: true
         description: "dns record value"
+      proxied:
+        type: "bool"
+        description: "proxy through cloudflare network or just use dns"
       ttl:
         type: "int"
         description: >-
