--- a/tasks/dns/nsupdate/nsupdate.schema.dns.yml
+++ b/tasks/dns/nsupdate/nsupdate.schema.dns.yml
@@ -45,6 +45,10 @@ schemas:
         type: "str"
         non_empty: true
         description: "dns record to add/remove (according to state)"
+      proxied:
+        type: "bool"
+        description: "proxy through external network or just use dns"
+        choices: [null, false]
       ttl:
         type: "int"
         description: "dns record ttl (time-to-live)"
@@ -77,6 +81,10 @@ schemas:
         type: "str"
         non_empty: true
         description: "dns record value"
+      proxied:
+        type: "bool"
+        description: "proxy through external network or just use dns"
+        choices: [null, false]
   credentials:
     type: "dict"
     description: "nsupdate dns credentials schema"
