[dev] cdn - stackpath

--- a/tasks/cdn/fastly/fastly.schema.cdn.yml
+++ b/tasks/cdn/fastly/fastly.schema.cdn.yml
@@ -177,7 +177,7 @@ schemas:
         type: "str"
         non_empty: true
       port:
-        type: "str"
+        type: "int"
         description: "defaults to 80"
       address:
         type: "str"
