--- a/tasks/cdn/stackpath/stackpath.schema.cdn.yml
+++ b/tasks/cdn/stackpath/stackpath.schema.cdn.yml
@@ -28,21 +28,14 @@ schemas:
           the parameters as only one definition; instead, what is defined at the outer parameters
           will be used as a default for each list item parameter; when not defined, will use
           the outer parameters as one single list item
-      name:
-        type: "str"
-        non_empty: true
-        description: "the unique name for the service to create"
-  list_item_params:
-    type: "dict"
-    description: "stackpath cdn parameters list schema"
-    props:
       stack_slug:
         type: "str"
         non_empty: true
         description: >-
           the slug for the stack to create (used for idempotency);
           if some data changes, specify another slug (optionally
-          specifying to delete the previous slug after creating the new one)
+          specifying to delete the previous slug after creating the new one);
+          this slug should not be specified in different services
       stack_name:
         type: "str"
         description: "the stack name"
@@ -65,6 +58,48 @@ schemas:
         description: >-
           the previous slug to delete when some data changed (optional);
           must be differente than stack_slug
+  list_item_params:
+    type: "dict"
+    description: "stackpath cdn parameters list schema"
+    props:
+      stack_slug:
+        type: "str"
+        non_empty: true
+        description: >-
+          the slug for the stack to create (used for idempotency);
+          if some data changes, specify another slug (optionally
+          specifying to delete the previous slug after creating the new one);
+          this slug should not be specified in different services
+      stack_name:
+        type: "str"
+        description: "the stack name"
+      domain:
+        type: "str"
+        non_empty: true
+        description: "the site's domain name"
+      origin:
+        type: "dict"
+        description: "the site's origin"
+      features:
+        type: "list"
+        elem_type: "str"
+        description: "a list of features desired on the site"
+      configuration:
+        type: "dict"
+        description: "advanced configuration options"
+      previous_slug:
+        type: "str"
+        description: >-
+          the previous slug to delete when some data changed (optional);
+          must be differente than stack_slug
+  origin:
+    type: "dict"
+    description: "the site's origin"
+    props: {}
+  configuration:
+    type: "dict"
+    description: "advanced configuration options"
+    props: {}
   credentials:
     type: "dict"
     description: "stackpath cdn credentials schema"
@@ -87,5 +122,4 @@ schemas:
         description: "stackpath client secret"
       grant_type:
         type: "str"
-        non_empty: true
         description: "stackpath grant type"
