--- a/tasks/dns/cloudflare/cloudflare.main.dns.yml
+++ b/tasks/dns/cloudflare/cloudflare.main.dns.yml
@@ -1,3 +1,6 @@
+- debug:
+    var: inner_service_params
+
 - name: "{{ inner_service_title }} - cloudflare dns - vars"
   lrd.ext_cloud.vars:
     identifier: "cloudflare_dns"
@@ -10,6 +13,9 @@
   register: ext_dns_data_wrapper
   no_log: "{{ env_no_log }}"
   tags: ["no_print"]
+
+- debug:
+    var: ext_dns_data_wrapper
 
 - name: "{{ inner_service_title }} - cloudflare dns - main"
   cloudflare_dns:
